2009-07-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* error.cpp|h:
	* downloader.cpp:
	* eventargs.cpp|h: Set the object's type upon construction instead
	of using SetObjectType right after. This is useful when tracking
	objects by type - the ctor also shows up.

	* dependencyobject.cpp|h: Add a DependencyObject ctor that takes
	a Type::Kind argument.

2009-07-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* debug.cpp: Make the stacktrace pipes thread-local. This way
	printing stacktraces from several threads at the same time doesn't
	result in a big mess.

2009-07-30  Larry Ewing  <lewing@novell.com>

	* layoutinformation.cpp (GetClip): add a workaround for the panel
	case while layoutinformation is refactored.
	
2009-07-30  Larry Ewing  <lewing@novell.com>

	* layoutinformation.cpp: repair a merge bug.

2009-07-30  Larry Ewing  <lewing@novell.com>

	* layoutinformation.cpp, layoutinformation.h: move layoutinformation
	out of uielement.h.  Compute the layout clip on the fly.

	* border.cpp:
	* dependencyproperty.g.cpp:
	* frameworkelement.cpp:
	* frameworkelement.h:
	* glyphs.cpp:
	* media.cpp:
	* mediaelement.cpp:
	* panel.cpp:
	* point.h:
	* shape.cpp:
	* textblock.cpp:
	* textbox.cpp:
	* textbox.h:
	* uielement.cpp:
	* uielement.h: start reworking layout logic at we refactor
	layoutinformation.  Use RenderLayoutClip where appropriate.

2009-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* fontmanager.cpp (GetExtents): Much better fix than the
	string-comparison hack. Poke at the TrueType/OpenType OS/2 table
	and use the usWinAscent/usWinDescent values since this is what
	most Windows applications (brokenly) use according to some info I
	found on the web. Low and behold, this also makes the Adobe Caslon
	Pro metrics work out exactly like they do in Silverlight, so I'm
	guessing that the info I found is accurate :-)

2009-07-30  Larry Ewing  <lewing@novell.com>

	* uielement.cpp (DoArrange): revert the parent invalidation change as it
	did break things.
